# nervous

./: .gitignore  LICENSE  README.md
Neuralnet/Neuralnet/: XDCArray.h  XDCArray.m  XDLayer.h  XDLayer.m  XDLogistic.h  XDLogistic.m  XDMath.h  XDMath.m  XDNeuralnet.h  XDNeuralnet.m  XDNeuralnetTools.h  XDNeuralnetTools.m  XDTraining.h  XDTraining.m
Neuralnet/Neuralnet.xcodeproj/: project.pbxproj
Neuralnet/NeuralnetTests/: CArrayTests.m  NeuralnetTests-Info.plist  NeuralnetTests.m  XDCArrayTests.h  XDCArrayTests.m
data-tools.xcworkspace/: contents.xcworkspacedata
nervous/: AUTHORS  Makefile.am  Makefile.in  build-ios.sh  cleanautotools.sh  config.h  configure  configure.ac
nervous-ios/Nervous.xcworkspace/: contents.xcworkspacedata
nervous-ios/Nervous/Nervous/: Nervous.h  Neuralnet.swift  initblas.c  initblas.h  module.map
nervous-ios/Nervous/Nervous.xcodeproj/: project.pbxproj
nervous-ios/Nervous/NervousTests/: Fixture.swift  Info.plist  NervousTests.swift  NetFixture.swift  NetSizeTests.swift  NeuralnetTests.swift
nervous-ios/Neuralnet/Neuralnet/: CArray.h  CArray.m  FloatMath.h  FloatMath.m  Info.plist  Layer.h  Layer.m  Logistic.h  Logistic.m  Net.h  Net.m  Neuralnet.h  NeuralnetTools.h  NeuralnetTools.m  Training.h  Training.m  (+1 more)
nervous-ios/Neuralnet/Neuralnet.xcodeproj/: project.pbxproj
nervous/src/: FloatMath.cpp  FloatMath.h  blasfuncs.cpp  blasfuncs.h  foo.cpp  layer.cpp  math.cpp  math.h  mathutil.cpp  mathutil.h  module.map  nervous  nervous.h  net.cpp  net.h  netarch.cpp  netarch.h  nettools.cpp  nettools.h  sample.h  training.cpp  training.h
(+3 files in other folders)
